--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
     <div class="order-backdrop is-hidden" data-modal>
         <div class="order-modal">
-            <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
             <button data-modal-close class="modal-close">
             <svg class="close-btn" width="18" height="18">
                 <use href="./images/icons.svg#icon-close"></use>
